Set up overall architecture

--- a/GloBus-backend/appsettings.json
+++ b/GloBus-backend/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "default": "Server=.;Database=Test;Trusted_Connection=True;Encrypt=False"
+    "default": "Server=localhost\\SQLEXPRESS;Database=GloBus;Trusted_Connection=True;Encrypt=False"
   },
 
   "Logging": {
