Add automapper package reference

--- a/GloBus.Infrastructure/GloBus.Infrastructure.csproj
+++ b/GloBus.Infrastructure/GloBus.Infrastructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0">
@@ -17,13 +18,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\" />
     <Folder Include="Exceptions\" />
     <Folder Include="CustomMiddlewares\" />
     <Folder Include="CQRS\Commands\" />
     <Folder Include="CQRS\" />
     <Folder Include="CQRS\Queries\" />
-    <Folder Include="Repositories\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\GloBus.Data\GloBus.Data.csproj" />
   </ItemGroup>
 
 </Project>
