Implement login Task with jwt and basic error handling, and with api response for frontend

--- a/GloBus-backend/appsettings.json
+++ b/GloBus-backend/appsettings.json
@@ -9,5 +9,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "Jwt": {
+    "Issuer": "https://globus.rs",
+    "Audience": "https://globus.rs",
+    "Key":  "INEDODJETUPONOVONIKADAVISEKAOZIVCOVEK"
+  },
+
   "AllowedHosts": "*"
 }
