add JWTAuth and exceprionHandlerMiddleWare Changes

--- a/GloBus-backend/appsettings.json
+++ b/GloBus-backend/appsettings.json
@@ -11,9 +11,9 @@
   },
 
   "Jwt": {
-    "Issuer": "https://globus.rs",
-    "Audience": "https://globus.rs",
-    "Key":  "INEDODJETUPONOVONIKADAVISEKAOZIVCOVEK"
+    "Issuer": "https://localhost:7269/",
+    "Audience": "https://localhost:7269/",
+    "Key": "INEDODJETUPONOVONIKADAVISEKAOZIVCOVEK"    
   },
 
   "AllowedHosts": "*"
