--- a/.gitignore
+++ b/.gitignore
@@ -90,7 +90,7 @@ StyleCopReport.xml
 *.tlh
 *.tmp
 *.tmp_proj
-*_wpftmp.csproj
+*_wpftmp. 
 *.log
 *.vspscc
 *.vssscc
@@ -366,3 +366,20 @@ FodyWeavers.xsd
 /GloBus.Data/Migrations/20231223133909_init.cs
 /GloBus.Data/Migrations/20231223133909_init.Designer.cs
 
+/GloBus.Data/DTOs/UserRegisterDTO.cs
+/GloBus.Data/DTOs/UserRegisterDTO.cs
+/GloBus.Data/DTOs/UserLoginDTO.cs
+/GloBus-backend/GloBus-backend.csproj
+/GloBus.Infrastructure/GloBus.Infrastructure.csproj
+/GloBus.Data/GloBus.Data.csproj
+/GloBus.Data/Migrations/20231222171913_init.cs
+/GloBus.Data/Migrations/20231222171913_init.Designer.cs
+/GloBus.Infrastructure/GloBus.Infrastructure.csproj
+/GloBus.Data/GloBus.Data.csproj
+/GloBus.Data/DTOs/UserRegisterDTO.cs
+/GloBus.Data/DTOs/UserLoginDTO.cs
+/GloBus.Data/Migrations/20231222171913_init.Designer.cs
+/GloBus.Data/Migrations/20231222171913_init.cs
+/GloBus.Data/Migrations/20240103152727_identityImplementation.cs
+/GloBus.Data/Migrations/20240103152727_identityImplementation.Designer.cs
+/GloBus.Data/Migrations/GloBusContextModelSnapshot.cs
