add user model new atributs

--- a/.gitignore
+++ b/.gitignore
@@ -383,3 +383,8 @@ FodyWeavers.xsd
 /GloBus.Data/Migrations/20240103152727_identityImplementation.cs
 /GloBus.Data/Migrations/20240103152727_identityImplementation.Designer.cs
 /GloBus.Data/Migrations/GloBusContextModelSnapshot.cs
+/GloBus.Infrastructure/Repositories/UsersRepository.cs
+*.cs
+/GloBus.Data/DTOs/UserRegisterDTO.cs
+/GloBus.Data/Migrations/20231222171913_init.Designer.cs
+/GloBus.Data/Migrations/20231222171913_init.cs
